# CppLibraries

./: .gitignore  CMakeLists.txt  README.md  code  code.cpp  data.cpp.txt  main.cpp
1_LAB/: CMakeLists.txt  main.cpp
echo/: echo  echo.cpp  echo.h
erer/: ooooo.py
hello/: hello.cpp  hello.h
lib/: code.cpp  def.h  for  for.h  for.h.gch  tmf.h  советы
scripts/: hello_world_1.cpp
temp/: 1.cpp  a.py  aa.py  au  start.py  temp  temp.cpp
