cmake_minimum_required(VERSION 3.17)
project(CppLibraries)

set(CMAKE_CXX_STANDARD 20)

add_executable(CppLibraries main.cpp lib/tmf.h)
add_executable(README README.md)
add_executable(main main.cpp)
add_executable(tmf lib/tmf.h)
add_executable(code lib/code.cpp)
#add_executable(.gitignore)
#add_executable(LICENSE LICENSE)
add_executable(LICENSE LICENSE)
add_executable(CMakeLists CMakeLists.txt)
add_executable(Снимок экрана от 2021-03-10 23-39-43 "Снимок экрана от 2021-03-10 23-39-43.png")